# RCPLib

./: CMakeLists.txt
cmake/: configure_project.cmake
include/: compiler_support.h
include/data/: data_buffer.h
include/platform/: platform.h  utf8.h
include/threads/: promise_ex.h  promise_ex_std.h  promise_ex_win.h  thread.h
include/utils/: always_false.h  func_raii.h  i_virtual_destroy.h  noncopyable.h  num_traits.h  simple_types.h  sys_env.h
include/win/: sync.h  win_common.h
src/platform/: PlatformCommon.cpp
src/platform/mac/: platform.mm  scoped_cftyperef.h  scoped_typeref.h  utf8.cpp
src/platform/win/: platform.cpp  utf8.cpp
src/threads/: thread.cpp
src/threads/mac/: thread_mac.cpp
src/threads/win/: thread_win.cpp
src/utils/: sys_env.cpp
src/utils/mac/: sys_env_mac.cpp
src/utils/win/: sys_env_win.cpp
src/win/: win_common.cpp
